@@ -114,7 +114,7 @@
 // Internals support
 - (void) rebuildObjToNameMapping;
 - (id) parseHeader: (NSString *)headerPath;
-- (void) removeConnectionsWithLabel: (NSString *)name
+- (BOOL) removeConnectionsWithLabel: (NSString *)name
                       forClassNamed: (NSString *)className
                            isAction: (BOOL)action;
 @end
